[tool.poetry]
name = "transcriber"
version = "0.1.0"
description = ""
authors = ["Edward Fleri Soler <edwardfsoler@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
transformers = "^4.33.2"
numpy = "^1.26.0"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
datasets = "^2.14.5"
pydub = "^0.25.1"
soundfile = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
